# roq-apps

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README-v1.md  README.md  build.sh  lqs_ctl.sh  run-mixer.sh  run.sh
pbin/: README.md  roqa_ctl.py
scripts/: create_activate_script.sh  create_conda_env.sh
share/: config-lqs.toml  config-old.tolm  config-spreader.toml  config.toml
src/quoters/: active.hpp  factory.hpp  quoters.hpp
src/quoters/mixer/: mixer-v1.hpp
src/quoters/unstable/: crypto_mixer.hpp  crypto_mixer.toml
src/roq/config/: CMakeLists.txt  README.md  manager.cpp  manager.hpp  toml_config.cpp  toml_config.hpp  toml_file.cpp  toml_file.hpp
src/roq/core/: CMakeLists.txt  README.md  _dispatcher.hpp  accounts.hpp  application.cpp  application.hpp  basic_handler.hpp  basic_pricer.hpp  best_price_source.hpp  best_quotes.cpp  best_quotes.hpp  best_quotes_cache.cpp  best_quotes_cache.hpp  best_quotes_source.hpp  clock.hpp  contract_style.hpp  dispatcher.hpp  double.hpp  empty_value.hpp  execution_mode.hpp  exposure.hpp  exposure_update.hpp  factory.cpp  fmt.hpp  gateway.hpp  gateways.cpp  gateways.hpp  handler.hpp  hash.hpp  ident.hpp  main.cpp  manager.cpp  manager.hpp  market.hpp  market_status.hpp  market_types.hpp  markets.cpp  markets.hpp  order.hpp  passive_mode.hpp  (+22 more)
src/roq/core/best_quotes/: manager.cpp  manager.hpp
src/roq/core/config/: CMakeLists.txt  client.cpp  client.hpp  handler.hpp  manager.cpp  manager.hpp  toml_file.cpp  toml_file.hpp
src/roq/core/flags/: CMakeLists.txt  flags.cpp  flags.hpp
src/roq/core/gateway/: manager.cpp  manager.hpp
src/roq/core/market/: info.hpp  manager.cpp  manager.hpp
src/roq/core/oms/: CMakeLists.txt  book.cpp  book.hpp  handler.hpp  level.hpp  manager.cpp  manager.hpp  market.cpp  market.hpp  order.hpp  order_version.hpp
src/roq/core/portfolio/: manager.cpp  manager.hpp
src/roq/core/utils/: string_utils.cpp  string_utils.hpp
src/roq/dag/: CMakeLists.txt  aggr_type.hpp  compute.cpp  compute.hpp  factory.cpp  factory.hpp  graph.hpp  graph.ut.cpp  manager.cpp  manager.hpp  node.cpp  node.hpp  pricer.cpp  pricer.hpp
src/roq/dag/ops/: CMakeLists.txt  ema.cpp  ema.hpp  product.cpp  product.hpp  quote_shift.cpp  quote_shift.hpp  quote_spread.cpp  quote_spread.hpp  sum.cpp  sum.hpp
src/roq/lqs/: CMakeLists.txt  README.md  bait.cpp  bait.hpp  baiter.cpp  baiter.hpp  hedge.cpp  hedge.hpp  hedge_limit.cpp  hedge_limit.hpp  hedger.cpp  hedger.hpp  leg.cpp  leg.hpp  manager.cpp  manager.hpp  portfolio.cpp  portfolio.hpp  pricer.cpp  pricer.hpp  spread.cpp  spread.hpp  strategy.cpp  strategy.hpp  underlying.cpp  underlying.hpp
src/roq/mmaker/: CMakeLists.txt  application.cpp  application.hpp  basic_handler.hpp  basic_strategy.hpp  best_price_source.hpp  clock.hpp  context.cpp  context.hpp  factory.cpp  gateways.hpp  main.cpp  markets.hpp  mbp_depth_array.cpp  mbp_depth_array.hpp  order_manager.cpp  order_manager.hpp  position_source.hpp  profit_loss.hpp  publisher.cpp  publisher.hpp  strategy.cpp  strategy.hpp
src/roq/mmaker/_trash/: context.cpp  context.hpp  mbp_depth_array.cpp  mbp_depth_array.hpp  profit_loss.hpp  publisher.cpp  publisher.hpp
src/roq/mmaker/flags/: flags.cpp  flags.h  flags.hpp
src/roq/oms/: CMakeLists.txt  handler.hpp  level.hpp  manager.cpp  manager.hpp  market.cpp  market.hpp  order.hpp  order_version.hpp
src/roq/pricer/: CMakeLists.txt  _context.hpp  aggr_type.hpp  aggregate.hpp  compute.cpp  compute.hpp  factory.cpp  factory.hpp  graph.hpp  graph.ut.cpp  handler.hpp  manager.cpp  manager.hpp  node.cpp  node.hpp  price_units.hpp
src/roq/pricer/aggr/: product.hpp  sum.hpp
src/roq/pricer/ops/: CMakeLists.txt  all.hpp  ema.cpp  ema.hpp  mid_price.hpp  product.cpp  product.hpp  quote_shift.cpp  quote_shift.hpp  quote_spread.cpp  quote_spread.hpp  sum.cpp  sum.hpp  target_spread.cpp  target_spread.hpp
src/roq/pricer/tests/: quoter.ut.cpp
src/roq/quoter/: quoter.cpp  quoter.hpp
src/roq/spreader/: CMakeLists.txt  bait.cpp  bait.hpp  hedge.hpp  hedge_limit.cpp  hedge_limit.hpp  leg.cpp  leg.hpp  pricer.cpp  pricer.hpp  spread.cpp  spread.hpp
src/roq/threshold/: pricer.cpp  pricer.hpp
src/roq/umm/: CMakeLists.txt  application.cpp  application.hpp  config.hpp  main.cpp  strategy.cpp  strategy.hpp
src/roq/umm/flags/: flags.cpp  flags.h
